GNOME Bugzilla – Bug 654958
Missing 5min-timestamps
Last modified: 2011-08-01 11:14:47 UTC
Since Empathy 3.1.1 (this is a bit of a guess/estimation) timestamps are no longer printed/inserted every 5 minutes when using the Classic chat theme. To even rougly find out when someone is said something one has to use the Previous Converstations dialog. More importantly, if one opens a chat window, it is hard to detect after a while which text was part of a previous conversation and which of a current one.
I would have expected that there was a bug report for this already, since I know quite a few people who were complaining about this!
Created attachment 192977 [details] [review] chat_text_maybe_append_date_and_time: compute the right delta between timestamps The first argument of g_date_time_difference() should be the older timestamp.
Attachment 192977 [details] pushed as 4651fb3 - chat_text_maybe_append_date_and_time: compute the right delta between timestamps