chat_text_maybe_append_date_and_time: compute the right delta between timestamps

The first argument of g_date_time_difference() should be the older timestamp.

https://bugzilla.gnome.org/show_bug.cgi?id=654958